# castnet

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
src/routes/: +page.svelte
