[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
chrono = "0.4.42"
dotenv = "0.15.0"
futures = "0.3.31"
itertools = "0.14.0"
neo4rs = "0.8.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
tower-http = { version = "0.6.6", features = ["cors"] }
